--- a/Day 2 Cellular Automata/CA.ipynb
+++ b/Day 2 Cellular Automata/CA.ipynb
@@ -75,7 +75,7 @@
     "    \n",
     "    # scale-dependent activator-inhibitor parameters\n",
     "    R_a = 5 # activator radius\n",
-    "    R_i = 0 # inhibitor radius\n",
+    "    R_i = 10 # inhibitor radius\n",
     "    w_a = 0.3 # activator strength\n",
     "    w_i = 0.1 # inhibitor strength\n",
     "    \n",
@@ -91,9 +91,9 @@
     "        # w_a: strength of activator\n",
     "        # w_i: strength of inhibitor\n",
     "        \n",
-    "        # The total impact on the current strength is the amount of cells within activator range that are currently in the\n",
-    "        # 1 state times the activator strength w_a, minus the amount of cells within inhibiror range that are currently in\n",
-    "        # the 1 state times the inhibitor strength w_i.\n",
+    "        # The total impact on the current strength is the amount of cells within activator range that are \n",
+    "        # currently in the 1 state times the activator strength w_a, minus the amount of cells within inhibitor \n",
+    "        # range that are currently in the 1 state times the inhibitor strength w_i.\n",
     "        s = np.sum( A[N_a] * w_a ) - np.sum( A[N_i] * w_i)\n",
     "        \n",
     "        # If the total impact on the current cell is positive, it will be in the 1 state in the next time step;\n",
@@ -146,22 +146,6 @@
     "# The output is the state of the system at the end of the simulation\n",
     "A_end = CA_simulator(par, sim_set)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sqrt(2) * 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
