--- a/Day 3 Networks/infection.ipynb
+++ b/Day 3 Networks/infection.ipynb
@@ -77,13 +77,14 @@
     "    \n",
     "    # Choose the network type by typing in the desired name\n",
     "    # Possible options:\n",
-    "    # (1) 'lattice': a lattice network with horizontal and vertical connections between nodes and periodic boundaries\n",
-    "    # see also rows/column settings below\n",
-    "    # (2) 'random': first, a lattice network is created. Then, each edge is disconnected from one of the nodes with probability\n",
-    "    # q (defined below) and reattached to some other node\n",
-    "    # (3) 'community': creates C independent random networks. Then create r links between communities (and delte random other edges)\n",
+    "    # (1) 'lattice': a lattice network with horizontal and vertical connections between nodes and periodic \n",
+    "    # boundaries, see also rows/column settings below\n",
+    "    # (2) 'random': first, a lattice network is created. Then, each edge is disconnected from one of the nodes \n",
+    "    # with probability q (defined below) and reattached to some other node\n",
+    "    # (3) 'community': creates C independent random networks. Then create r links between communities (and delta \n",
+    "    # random other edges)\n",
     "    # (4) 'custom': use a custom network, which should be supplied in A below\n",
-    "    network_type = 'community'\n",
+    "    network_type = 'lattice'\n",
     "    \n",
     "    ## ADDITIONAL NETWORK SETUP\n",
     "    # Indicate the amount of rows and columns for the lattice network\n",
@@ -123,7 +124,7 @@
     "# Simulation settings are packed into a class for easy passing of all settings to the simulator function\n",
     "\n",
     "class SimSettings:        \n",
-    "    plot_interval = 10 # Output a new figure every so many time steps\n",
+    "    plot_interval = 5 # Output a new figure every so many time steps\n",
     "    \n",
     "    showPlot = True # do you want to see the infected every timestep?\n",
     "    showGraph = True # Do you want to see the spreading on the graph as well?\n",
@@ -148,7 +149,8 @@
    "outputs": [],
    "source": [
     "# The function is given all parameters as input\n",
-    "# The output is a list of the fraction of infected people/nodes I for every time t. Also, the adjecency matrix is given\n",
+    "# The output is a list of the fraction of infected people/nodes I for every time t. Also, the adjecency matrix is \n",
+    "# given\n",
     "[t, I, A] = infection_simulator(par,sim_set)"
    ]
   },
