--- a/Day 4 Adaptive and Evolutionary Systems/evolution_IBM.ipynb
+++ b/Day 4 Adaptive and Evolutionary Systems/evolution_IBM.ipynb
@@ -66,22 +66,23 @@
     "    ## GENERAL PARAMETERS\n",
     "    \n",
     "    # initial population size\n",
-    "    initial_size = 100\n",
+    "    initial_size = 500\n",
     "\n",
     "    # Initial properties of agents\n",
-    "    m = 0.05 # 0.05; # motility, i.e. movement\n",
-    "    d = 0.1 # 0.1; # death rate in absence of food\n",
-    "    r = 0.75 # 0.75; # reproduction rate (when meeting food)\n",
+    "    m = 0.05 # motility, i.e. movement\n",
+    "    d = 0.1 # death rate in absence of food\n",
+    "    r = 0.75 # reproduction rate (when meeting food)\n",
     "    \n",
     "    ## EVOLUTION PARAMETERS\n",
     "    # For each of these, the offspring can have a different parameter value by at most the amounts specified below\n",
-    "    evol_m = 0.01;\n",
+    "    evol_m = 0;\n",
     "    evol_d = 0;\n",
     "    evol_r = 0;\n",
     "    \n",
     "    ## PARAMETERS FOR FOOD CREATION\n",
-    "    # Make a function of time for the amount of food being put into the domain at each time step (this will be rounded to the nearest integer)\n",
-    "    def food_input(t):\n",
+    "    # Make a function of time (t) and the number of agents (n) for the amount of food being put into the domain \n",
+    "    # at each time step (this will be rounded to the nearest integer)\n",
+    "    def food_input(t, n):\n",
     "        return 10\n",
     "    keep_uneaten_food = True; # If true, food keeps pilling up until eaten\n",
     "    \n",
@@ -111,12 +112,12 @@
     "\n",
     "class SimSettings:\n",
     "    ## SIMULATION TIME\n",
-    "    timesteps = 3000;\n",
+    "    timesteps = 1000;\n",
     "    \n",
     "    ## VISUALISATION OPTIONS\n",
     "    count_plot = True # If on, shows the evolution of the agents & food\n",
     "    domain_plot = True # If on, shows location of every agent & food every time step\n",
-    "    plot_evolution = True # False If on, plots the distribution at every time step\n",
+    "    plot_evolution = False # If on, plots the distribution at every time step\n",
     "    \n",
     "    plot_interval = 100 # Update the plots every so many time steps\n",
     "    \n",
